--- a/components/MusicEmbed.module.scss
+++ b/components/MusicEmbed.module.scss
@@ -5,3 +5,18 @@
   width: 100%;
   margin: sizes.$xs 0;
 }
+
+.youtubeWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
