--- a/components/MusicEmbed.module.scss
+++ b/components/MusicEmbed.module.scss
@@ -3,7 +3,10 @@
 .iframe {
   border: 0;
   width: 100%;
-  margin: sizes.$xs 0;
+}
+
+.container {
+  margin: sizes.$s 0 sizes.$xl;
 }
 
 .youtubeWrapper {
