--- a/components/Text.module.scss
+++ b/components/Text.module.scss
@@ -89,3 +89,12 @@
 .code {
   font-family: Courier, monospace;
 }
+
+.blockquote {
+  padding-top: 1rem;
+  padding-left: 1rem;
+
+  & > * {
+    text-align: center;
+  }
+}
