--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,8 +7,25 @@ body {
   font-size: 16px;
 }
 
+html {
+  background-color: #fff
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+// -------------- THEME SWITCHER -------------- //
+@mixin dark-appearance {
+  filter: invert(1) hue-rotate(180deg);
+
+  img, iframe {
+    filter: invert(1) hue-rotate(-180deg);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  html { @include dark-appearance; }
 }
