--- a/blog/layout/Default.module.scss
+++ b/blog/layout/Default.module.scss
@@ -1,5 +1,5 @@
-@use '../tokens/breakpoints';
-@use '../tokens/sizes';
+@use '@cmd/tokens/breakpoints';
+@use '@cmd/tokens/sizes';
 
 .main {
   overflow: hidden;
