--- a/blog/components/Article.module.scss
+++ b/blog/components/Article.module.scss
@@ -1,5 +1,5 @@
-@use '../tokens/sizes';
-@use '../tokens/breakpoints';
+@use '@cmd/tokens/sizes';
+@use '@cmd/tokens/breakpoints';
 
 .article {
   display: grid;
